infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pe
  labels:
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/name: pe
